Closed Bug 1768568 Opened 2 years ago Closed 2 years ago

[clang-trunk] xpcom/reflect/xptcall/xptcstubsdef.inc(1,1): error: 'naked' attribute only applies to non-member functions

Categories

(Core :: XPCOM, defect)

defect

Tracking

()

RESOLVED FIXED
102 Branch
Tracking Status
firefox102 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.

GCC has been unsupported to build for Windows since bug 1601690.
MSVC has been unsupported since bug 1512504.
We can thus assume that xptcstubs is always compiled with clang.
At the same time, because clang-trunk did an erroneous change to how
it handles __declspec(naked)*, use attribute((naked)) instead,
which is clang-only, and handled differently.

[*] https://github.com/llvm/llvm-project/issues/55362

Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/5926ff0a21e7
Modify win32 xptcstubs to be clang-only. r=xpcom-reviewers,nika
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: