Bug 1768568 - Modify win32 xptcstubs to be clang-only. r=xpcom-reviewers,nika

GCC has been unsupported to build for Windows since bug 1601690.
MSVC has been unsupported since bug 1512504.
We can thus assume that xptcstubs is always compiled with clang.
At the same time, because clang-trunk did an erroneous change to how
it handles __declspec(naked)*, use __attribute__((naked)) instead,
which is clang-only, and handled differently.

[*] https://github.com/llvm/llvm-project/issues/55362

Differential Revision: https://phabricator.services.mozilla.com/D145929