xpcom/reflect/xptcall/md/win32/xptcstubs.cpp
@@ -13,9 +13,7 @@
 
 extern "C" {
 
-#if !defined(__GNUC__)
 static
-#endif
 nsresult __stdcall
 PrepareAndDispatch(nsXPTCStubBase* self, uint32_t methodIndex,
                    uint32_t* args, uint32_t* stackBytesToPop)
@@ -84,15 +82,11 @@ PrepareAndDispatch(nsXPTCStubBase* self, uint32_t methodIndex,
 
 } // extern "C"
 
-// declspec(naked) is broken in gcc
-#if !defined(__GNUC__)
 static
-__declspec(naked)
+__attribute__((naked))
 // Compiler-inserted instrumentation is going to botch our assembly below,
 // so forbid the compiler from doing that.
-#if defined(__clang__)
 __attribute__((no_instrument_function))
-#endif
 void SharedStub(void)
 {
     __asm {
@@ -119,65 +113,8 @@ void SharedStub(void)
 
 // these macros get expanded (many times) in the file #included below
 #define STUB_ENTRY(n) \
-__declspec(naked) nsresult __stdcall nsXPTCStubBase::Stub##n() \
+__attribute__((naked)) nsresult __stdcall nsXPTCStubBase::Stub##n() \
 { __asm mov ecx, n __asm jmp SharedStub }
-
-#else /* __GNUC__ */
-
-asm(".text\n\t"
-    ".align     4\n\t"
-    "SharedStub:\n\t"
-    "push       %ebp\n\t"
-    "mov        %esp, %ebp\n\t"
-    "push       %ecx\n\t"
-    "lea        -4(%ebp), %eax\n\t"
-    "push       %eax\n\t"
-    "lea        12(%ebp), %eax\n\t"
-    "push       %eax\n\t"
-    "push       %ecx\n\t"
-    "movl       8(%ebp), %eax\n\t"
-    "push       %eax\n\t"
-    "call       \"_PrepareAndDispatch@16\"\n\t"
-    "mov        4(%ebp), %edx\n\t"
-    "mov        -4(%ebp), %ecx\n\t"
-    "add        $8, %ecx\n\t"
-    "mov        %ebp, %esp\n\t"
-    "pop        %ebp\n\t"
-    "add        %ecx, %esp\n\t"
-    "jmp        *%edx"
-);
-
-#define STUB_ENTRY(n) \
-asm(".text\n\t" \
-    ".align     4\n\t" \
-    ".if	" #n " < 10\n\t" \
-    ".globl     __ZN14nsXPTCStubBase5Stub" #n "Ev@4\n\t" \
-    ".def       __ZN14nsXPTCStubBase5Stub" #n "Ev@4; \n\t" \
-    ".scl       2\n\t" \
-    ".type      46\n\t" \
-    ".endef\n\t" \
-    "__ZN14nsXPTCStubBase5Stub" #n "Ev@4:\n\t" \
-    ".elseif	" #n " < 100\n\t" \
-    ".globl     __ZN14nsXPTCStubBase6Stub" #n "Ev@4\n\t" \
-    ".def       __ZN14nsXPTCStubBase6Stub" #n "Ev@4\n\t" \
-    ".scl       2\n\t" \
-    ".type      46\n\t" \
-    ".endef\n\t" \
-    "__ZN14nsXPTCStubBase6Stub" #n "Ev@4:\n\t" \
-    ".elseif    " #n " < 1000\n\t" \
-    ".globl     __ZN14nsXPTCStubBase7Stub" #n "Ev@4\n\t" \
-    ".def       __ZN14nsXPTCStubBase7Stub" #n "Ev@4\n\t" \
-    ".scl       2\n\t" \
-    ".type      46\n\t" \
-    ".endef\n\t" \
-    "__ZN14nsXPTCStubBase7Stub" #n "Ev@4:\n\t" \
-    ".else\n\t" \
-    ".err	\"stub number " #n " >= 1000 not yet supported\"\n\t" \
-    ".endif\n\t" \
-    "mov $" #n ", %ecx\n\t" \
-    "jmp SharedStub");
-
-#endif /* __GNUC__ */
 
 #define SENTINEL_ENTRY(n) \
 nsresult __stdcall nsXPTCStubBase::Sentinel##n() \
@@ -196,9 +133,6 @@ nsresult __stdcall nsXPTCStubBase::Sentinel##n() \
 #endif
 
 void
-#ifdef __GNUC__
-__cdecl
-#endif
 xptc_dummy()
 {
 }
